# EngenhariaSulEmailsAsync

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs
src/db/: chunks.rs  mod.rs  oracle_query.rs  query.rs
src/io/: ini.rs  mod.rs  send_email.rs  templating.rs
templates/: base.html
