[package]
name = "envio-email-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.1",features =["fs","rt","macros"]}
tokio-stream = "0.1.9"
serde = {version = "1.0.136",features = ["derive"]}
serde_json = "1.0.79"
lettre = {version = "0.10.0-rc.4",features = ["tokio1-native-tls"]}
configparser = "3.0.0"
tera = "1.17.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","mysql","chrono","json"] }
oracle = { version = "0.5", features = ["chrono"] }
chrono = "0.4"
lazy_static = "1.4.0"